# matgrab

./: CONTRIBUTING.md  LICENSE  README.md  matgrab.py  matgrab_dev.py  package_test.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package-conda.yml  python-package.yml  requirements.txt
src/MatGrab_Aaronearlerichardson.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/matgrab/: matgrab.py
