[metadata]
name = MatGrab-Aaronearlerichardson
version = 0.0.4
author = Aaronearlerichardson
author_email = jakdaxter31@gmail.com
description = search and extract field names or variables from MATLAB .mat files and return a pandas Dataframe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Aaronearlerichardson/matgrab
project_urls =
    Bug Tracker = https://github.com/Aaronearlerichardson/matgrab/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src